--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
         "nexmo/client": "^1.4",
-        "nexmo/laravel": "^1.1",
-        "tymon/jwt-auth": "^0.5.12"
+        "nexmo/laravel": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
