--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NEXMO_KEY=9391c666
+NEXMO_SECRET=wjI4P1q9GpbzX3GH
+
+TWILIO_AUTH_TOKEN=
+TWILIO_AUTH_SID=
+TWILIO_FROM=
