.env sql server

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlsrv
-DB_HOST=localhost
+DB_HOST=boxinserver.database.windows.net
 DB_PORT=1433
-DB_DATABASE=forge
-DB_USERNAME=forge
-DB_PASSWORD=secret
+DB_DATABASE=coredatabase
+DB_USERNAME=boxinadmindatabase
+DB_PASSWORD=@Dm1nistrat0r
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
