--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Boxin-UserManagement
 APP_ENV=local
 APP_KEY=base64:29onnggq3OAiD/xJ3jXKOdl9oU7O5RPScE9pgsxcq8s=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://boxin-dev-usermanagament.azurewebsites.net/public/
 
 LOG_CHANNEL=stack
 
