--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=5f2813c1bf73cb
+MAIL_PASSWORD=edea1bfd043ce1
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
