--- a/.env
+++ b/.env
@@ -24,11 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=5f2813c1bf73cb
-MAIL_PASSWORD=edea1bfd043ce1
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=meidina@twiscode.com
+MAIL_PASSWORD=250595@twiscode.com
+MAIL_ENCRYPTION=tls
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
