--- a/.env
+++ b/.env
@@ -39,5 +39,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-NEXMO_KEY=9391c666
-NEXMO_SECRET=wjI4P1q9GpbzX3GH
+NEXMO_KEY=79c503eb
+NEXMO_SECRET=16ac9f80
