--- a/.env
+++ b/.env
@@ -24,11 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
-MAIL_USERNAME=meidina@twiscode.com
-MAIL_PASSWORD=250595@twiscode.com
+MAIL_USERNAME=meidinaisnur
+MAIL_PASSWORD=12345678sendgrid
 MAIL_ENCRYPTION=tls
+MAIL_FROM_NAME="Boxin Administrator"
+MAIL_FROM_ADDRESS=admin@boxin.com
 
 
 PUSHER_APP_ID=
