--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "nexmo/client": "^1.4",
         "nexmo/laravel": "^1.1",
         "twilio/sdk": "4.10",
-        "zenapply/laravel-sms": "^2.1"
+        "zenapply/laravel-sms": "^2.1",
+        "sendgrid/sendgrid": "~7"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
