--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
-MAIL_USERNAME=yuni27
-MAIL_PASSWORD=12345678sendgrid
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=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
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="Boxin Administrator"
 MAIL_FROM_ADDRESS=admin@boxin.com
