--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
 MAIL_USERNAME=apikey
-MAIL_PASSWORD=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
+MAIL_PASSWORD=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
 MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
