--- a/.env
+++ b/.env
@@ -40,3 +40,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 NEXMO_KEY=79c503eb
 NEXMO_SECRET=16ac9f80
+
+TWILIO_ACCOUNT_SID=AC698d93976b6dbbdd641827dbf4b6d6b3
+TWILIO_AUTH_TOKEN=9cc4d455fcc156fa711f034e0536b0b0
+TWILIO_APP_SID=APXXXXXXXXXXXXXXXXXXX
