--- a/.env
+++ b/.env
@@ -38,7 +38,12 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-TWILIO_ACCOUNT_SID=AC826340d55e629c3053da131091af504a
-TWILIO_AUTH_TOKEN=6c7f61c9282521f56b51152fea5ad22e
+# TWILIO_ACCOUNT_SID=AC826340d55e629c3053da131091af504a
+# TWILIO_AUTH_TOKEN=6c7f61c9282521f56b51152fea5ad22e
+# TWILIO_APP_SID=APXXXXXXXXXXXXXXXXXXX
+# TWILIO_NUMBER=PN50d6aa1e91004dd8a4a3693d344e07ab
+
+TWILIO_ACCOUNT_SID=AC84c1019dcdeee5e308165e6e42670b1c
+TWILIO_AUTH_TOKEN=affd1ee2eec627b27fbab59528dfba76
 TWILIO_APP_SID=APXXXXXXXXXXXXXXXXXXX
-TWILIO_NUMBER=PN50d6aa1e91004dd8a4a3693d344e07ab
+TWILIO_NUMBER=+17755719802
