--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-TWILIO_ACCOUNT_SID=ACa1f97270f6aaf9f34248ee91acc71290
-TWILIO_AUTH_TOKEN=29bc645b66de59836ddb18b93b079e27
-TWILIO_APP_SID=PN7b34e5bea0b072b41c05a81f32e0495b
-TWILIO_NUMBER=+18312731142
+# TWILIO_ACCOUNT_SID=ACa1f97270f6aaf9f34248ee91acc71290
+# TWILIO_AUTH_TOKEN=29bc645b66de59836ddb18b93b079e27
+# TWILIO_APP_SID=PN7b34e5bea0b072b41c05a81f32e0495b
+# TWILIO_NUMBER=+18312731142
