--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.6.*",
         "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
+        "mailjet/mailjet-apiv3-php": "^1.5",
         "nexmo/client": "^1.4",
         "nexmo/laravel": "^1.1",
         "sendgrid/sendgrid": "~7",
